--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -16,16 +16,15 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li class="active"><a th:href="@{/}">홈</a></li>
-                <li><a th:href="@{/category}">카테고리 <span class="arrow_carrot-down"></span></a>
-                  <ul class="dropdown">
-                    <li><a th:href="@{/category}">Categories</a></li>
-                    <li><a th:href="@{/profile/detail}">Profile Details</a></li>
-                    <li><a href="./anime-watching.html">Anime Watching</a></li>
-                    <li><a href="./blog-details.html">Blog Details</a></li>
-                    <li><a href="./signup.html">Sign Up</a></li>
-                    <li><a th:href="@{/login}">Login</a></li>
-                  </ul>
-                </li>
+                <li><a th:href="@{/profile/category}">인물도감</a></li>
+<!--                  <ul class="dropdown">-->
+<!--                    <li><a th:href="@{/category}">Categories</a></li>-->
+<!--                    <li><a th:href="@{/profile/detail}">Profile Details</a></li>-->
+<!--                    <li><a href="./anime-watching.html">Anime Watching</a></li>-->
+<!--                    <li><a href="./blog-details.html">Blog Details</a></li>-->
+<!--                    <li><a href="./signup.html">Sign Up</a></li>-->
+<!--                    <li><a th:href="@{/login}">Login</a></li>-->
+<!--                  </ul>-->
                 <li><a href="./blog.html">블로그</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
