--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -36,14 +36,14 @@
                         <h3>로그인</h3>
                         <form action="#">
                             <div class="input__item">
-                                <input type="text" placeholder="Email address">
+                                <input type="email" placeholder="이메일 주소">
                                 <span class="icon_mail"></span>
                             </div>
                             <div class="input__item">
-                                <input type="text" placeholder="Password">
+                                <input type="password" placeholder="비밀번호">
                                 <span class="icon_lock"></span>
                             </div>
-                            <button type="submit" class="site-btn">Login Now</button>
+                            <button type="submit" class="site-btn">Login</button>
                         </form>
                         <a href="#" class="forget_pass">비밀번호를 잊으셨나요?</a>
                     </div>
@@ -55,36 +55,9 @@
                     </div>
                 </div>
             </div>
-<!--            <div class="login__social">-->
-<!--                <div class="row d-flex justify-content-center">-->
-<!--                    <div class="col-lg-6">-->
-<!--                        <div class="login__social__links">-->
-<!--                            <span>or</span>-->
-<!--                            <ul>-->
-<!--                                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i> Sign in With-->
-<!--                                Facebook</a></li>-->
-<!--                                <li><a href="#" class="google"><i class="fa fa-google"></i> Sign in With Google</a></li>-->
-<!--                                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i> Sign in With Twitter</a>-->
-<!--                                </li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
         </div>
     </section>
     <!-- Login Section End -->
-
-    <!-- Search model Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch"><i class="icon_close"></i></div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
-    <!-- Search model end -->
 
 </body>
 
