--- a/src/main/resources/templates/main/signup.html
+++ b/src/main/resources/templates/main/signup.html
@@ -34,17 +34,17 @@
                 <div class="col-lg-6">
                     <div class="login__form">
                         <h3>회원가입</h3>
-                        <form action="#">
+                        <form th:action="@{/members/new}" th:object="${memberForm}" method="post">
                             <div class="input__item">
-                                <input type="email" placeholder="이메일 주소">
+                                <input type="email" th:field="*{email}" placeholder="이메일 주소">
                                 <span class="icon_mail"></span>
                             </div>
                             <div class="input__item">
-                                <input type="text" placeholder="이프랜드 아이디">
+                                <input type="text" th:field="*{iflandNickName}" placeholder="이프랜드 아이디">
                                 <span class="icon_profile"></span>
                             </div>
                             <div class="input__item">
-                                <input type="password" placeholder="비밀번호">
+                                <input type="password" th:field="*{password}" placeholder="비밀번호">
                                 <span class="icon_lock"></span>
                             </div>
                             <button type="submit" class="site-btn">Regist</button>
