--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,5 +37,6 @@
         <script th:src="@{/js/jquery.slicknav.js}"></script>
         <script th:src="@{/js/owl.carousel.min.js}"></script>
         <script th:src="@{/js/main.js}"></script>
+        <script th:src="@{/js/util/commonUtils.js}"></script>
     </head>
 </th:block>
