--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -115,22 +115,22 @@
                             <div class="section-title">
                                 <h5>Write Comment</h5>
                             </div>
-                            <form action="#">
+                            <form id="comment-form" action="#">
                                 <textarea id="comment" placeholder="300자 이내로 작성해주세요."></textarea>
                                 <button id="comment-button" type="submit"><i class="fa fa-location-arrow"></i> Comment</button>
                             </form>
                         </div>
                         <div class="anime__details__review">
                             <div class="section-title">
-                                <h5>Reviews</h5>
+                                <h5>Comment</h5>
                             </div>
-                            <div class="anime__review__item">
+                            <div class="anime__review__item" th:each="comment : ${profile.comments}">
                                 <div class="anime__review__item__pic">
                                     <img src="img/anime/review-1.jpg" alt="">
                                 </div>
                                 <div class="anime__review__item__text">
-                                    <h6>지누리즈 - <span>1시간 전</span></h6>
-                                    <p>재밌게 잘봤습니다 :)</p>
+                                    <h6><span th:text="${comment.iflandNickName}" style="color: #ffffff"></span><span> - 1시간 전</span></h6>
+                                    <p th:text="${comment.contents}"></p>
                                 </div>
                             </div>
                         </div>
