--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,26 +5,9 @@
         <div class="page-up">
             <a href="#" id="scrollToTopButton"><span class="arrow_carrot-up"></span></a>
         </div>
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-3">-->
-<!--                    <div class="footer__logo">-->
-<!--                        <a href="./index.html"><img src="img/logo.png" alt=""></a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-6">-->
-<!--                    <div class="footer__nav">-->
-<!--                        <ul>-->
-<!--                            <li class="active"><a href="./index.html">Homepage</a></li>-->
-<!--                            <li><a href="./categories.html">Categories</a></li>-->
-<!--                            <li><a href="./blog.html">Our Blog</a></li>-->
-<!--                            <li><a href="#">Contacts</a></li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
-<!--                </div>-->
                 <div class="col-lg-3" style="margin: auto;">
                     <p style="color: #ffffff"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>
+                        Copyright &copy;<script>document.write(dayjs().year());</script> All rights reserved by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                     <p style="color: #ffffff">
